Styling Fix - add gap bettween captcha and button, left align submit button

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -260,6 +260,10 @@ $error : pink;
 	}
 }
 
+.vc-recaptcha {
+	margin: 0 0 1rem;
+}
+
 .results-button {
 	height: 2.4875rem;
 	margin-top: 1.375rem;
